[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Items/BaseItem.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[node name="BaseItem" type="RigidBody"]
script = ExtResource( 2 )

[node name="PlayerDetection" type="Area" parent="."]

[node name="DetectionArea" type="CollisionShape" parent="PlayerDetection"]
shape = SubResource( 1 )

[connection signal="body_entered" from="PlayerDetection" to="." method="body_enter_area"]
[connection signal="body_exited" from="PlayerDetection" to="." method="body_exit_area"]
